# rotm-srsRAN_Project

./: CMakeLists.txt
fuzz/: .gitignore  1.txt  2.txt  CMakeLists.txt  LTO.md  README.md  a.txt  b.txt  decode.cpp  decode_all.sh  fuzz_setup_request_non_persistent.cpp  fuzz_setup_request_persistent.cpp  generate_input_corpus.cpp
fuzz/stateful/: README.md
fuzz2/ex1/aflpp/: .gitignore  build.sh
fuzz2/ex1/libafl/: Cargo.toml  README.md  build.sh
fuzz2/ex1/libafl/src/: lib.rs
fuzz2/ex1/libfuzzer/: .gitignore  build.sh
fuzz2/ex2/: README.md
fuzz2/ex2/libafl/: Cargo.toml  README.md  build.sh
fuzz2/ex2/libafl/src/: lib.rs
fuzz2/ex3/libafl/: .gitignore  Cargo.toml  build.sh
fuzz2/ex3/libafl/src/: lib.rs
fuzz3/: CMakeLists.txt
fuzz3/ex1/: .gitignore  Cargo.toml  README.md  build_srsran.sh  build_xml.sh
fuzz3/ex1/src/: lib.rs
fuzz3/ex2/: CMakeLists.txt  Cargo.toml  README.md  pcap_de.cc  pcap_de.h  pcap_de_test.cc  target.cc
fuzz3/test/: Cargo.toml
fuzz3/test/src/: input.rs  main.rs  mutator.rs  scheduled.rs
fuzz_benchmark/: CMakeLists.txt  README.md
fuzz_benchmark/aflpp/: .gitignore  CMakeLists.txt  README.md  tasks.py  tasks_old.py
fuzz_benchmark/benchmarks/libxml2/: target.cc
fuzz_benchmark/benchmarks/srsran/: build.py  build.sh
fuzz_benchmark/experiments/ex1/aflpp/: .gitignore  tasks.py
fuzz_benchmark/fuzzers/aflpp/: __init__.py
fuzz_benchmark/libfuzzer/: .gitignore  CMakeLists.txt  README.md  clean.sh  decode_all.sh  fuzz_me.cc  tasks.py
fuzz_benchmark/targets/: README.md  tasks.py
fuzz_benchmark/targets/libxml2/: README.md  __init__.py  build.sh  install_deps.sh
fuzz_benchmark/targets/srsran/: __init__.py  harness.cpp
fuzz_benchmark/utils/: CMakeLists.txt  decode_all.sh
fuzzing/: CMakeLists.txt
fuzzing/asn1/: CMakeLists.txt
fuzzing/asn1/ul_ccch/: .gitignore  CMakeLists.txt  build.sh  decode.cc  generate_input.cc  target.cc
fuzzing/asn1/ul_dcch/: CMakeLists.txt  README.md  build.sh  decode.cc  target.cc
fuzzing/ex1/: CMakeLists.txt  README.md  decode.cpp  generate_input.cc  pcap_mutator.cc  target.cc
fuzzing/ex1/packet_list/: packet_list.cc  packet_list.h  packet_list_test.cc
fuzzing/packet_list/: CMakeLists.txt
fuzzing/rrc/: CMakeLists.txt
fuzzing/rrc/setup_complete/: CMakeLists.txt  build.sh  decode.cc  generate_input.cc  target.cc
lib/asn1/: asn1_utils.cpp
tests/unittests/rrc/: CMakeLists.txt  rrc_ue_setup_proc_fuzz.cpp  rrc_ue_setup_proc_fuzz_test.cpp  rrc_ue_test_helpers.h
